--- a/dataset_augmentation.ipynb
+++ b/dataset_augmentation.ipynb
@@ -6,7 +6,6 @@
       "name": "dataset_augmentation.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNJrBiAyl3vBWC0hqEjIQ1B",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +36,7 @@
       "source": [
         "import pandas as pd"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -69,7 +68,7 @@
         "\n",
         "print(listtempat)"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -93,7 +92,7 @@
         "list_tempat = pd.Series(listtempat)\n",
         "print(list_tempat)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -122,7 +121,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MVE51jkQxRbh",
-        "outputId": "f0aec1b7-443a-4f6b-fb0b-830c04e2df47"
+        "outputId": "5168ed80-a1bc-4351-d52a-fda76e993079"
       },
       "source": [
         "banyakkorban = []\n",
@@ -135,14 +134,19 @@
         "for i in range(30):\n",
         "  banyakkorban.append(3)\n",
         "\n",
+        "for i in range(62):\n",
+        "  banyakkorban.append(1)\n",
+        "for i in range (7):\n",
+        "  banyakkorban.append(2)\n",
+        "\n",
         "print(len(banyakkorban))"
       ],
-      "execution_count": 11,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "3070\n"
+            "3139\n"
           ],
           "name": "stdout"
         }
