--- a/dataset_augmentation.ipynb
+++ b/dataset_augmentation.ipynb
@@ -121,7 +121,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MVE51jkQxRbh",
-        "outputId": "5168ed80-a1bc-4351-d52a-fda76e993079"
+        "outputId": "22419acd-a06b-4a78-fa22-36b896aafe95"
       },
       "source": [
         "banyakkorban = []\n",
@@ -136,17 +136,27 @@
         "\n",
         "for i in range(62):\n",
         "  banyakkorban.append(1)\n",
-        "for i in range (7):\n",
+        "for i in range(7):\n",
+        "  banyakkorban.append(2)\n",
+        "\n",
+        "for i in range(93):\n",
+        "  banyakkorban.append(1)\n",
+        "for i in range(13):\n",
+        "  banyakkorban.append(2)\n",
+        "\n",
+        "for i in range(5):\n",
+        "  banyakkorban.append(1)\n",
+        "for i in range(4):\n",
         "  banyakkorban.append(2)\n",
         "\n",
         "print(len(banyakkorban))"
       ],
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "3139\n"
+            "3254\n"
           ],
           "name": "stdout"
         }
