--- a/dataset_augmentation.ipynb
+++ b/dataset_augmentation.ipynb
@@ -14,8 +14,7 @@
     },
     "language_info": {
       "name": "python"
-    },
-    "accelerator": "GPU"
+    }
   },
   "cells": [
     {
@@ -121,7 +120,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MVE51jkQxRbh",
-        "outputId": "22419acd-a06b-4a78-fa22-36b896aafe95"
+        "outputId": "bfbeb10f-f555-48d1-b8c3-d570cfb96ded"
       },
       "source": [
         "banyakkorban = []\n",
@@ -149,14 +148,19 @@
         "for i in range(4):\n",
         "  banyakkorban.append(2)\n",
         "\n",
+        "for i in range(543):\n",
+        "  banyakkorban.append(1)\n",
+        "for i in range(125):\n",
+        "  banyakkorban.append(2)\n",
+        "\n",
         "print(len(banyakkorban))"
       ],
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "3254\n"
+            "3922\n"
           ],
           "name": "stdout"
         }
