--- a/dataset_augmentation.ipynb
+++ b/dataset_augmentation.ipynb
@@ -120,7 +120,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MVE51jkQxRbh",
-        "outputId": "bfbeb10f-f555-48d1-b8c3-d570cfb96ded"
+        "outputId": "2662c291-2ec1-48ea-ce61-0d5394861045"
       },
       "source": [
         "banyakkorban = []\n",
@@ -153,14 +153,19 @@
         "for i in range(125):\n",
         "  banyakkorban.append(2)\n",
         "\n",
+        "for i in range(1217):\n",
+        "  banyakkorban.append(1)\n",
+        "for i in range(80):\n",
+        "  banyakkorban.append(2)\n",
+        "\n",
         "print(len(banyakkorban))"
       ],
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "3922\n"
+            "5219\n"
           ],
           "name": "stdout"
         }
