--- a/dataset_augmentation.ipynb
+++ b/dataset_augmentation.ipynb
@@ -41,6 +41,17 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "_BeEcOzV4EVu"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
@@ -158,9 +169,11 @@
         "for i in range(80):\n",
         "  banyakkorban.append(2)\n",
         "\n",
-        "print(len(banyakkorban))"
+        "print(len(banyakkorban))\n",
+        "banyak_korban = pd.Series(banyakkorban)\n",
+        "print(banyak_korban)"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -170,6 +183,17 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GggoXcy_4GvL"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
