--- a/dataset_augmentation.ipynb
+++ b/dataset_augmentation.ipynb
@@ -14,7 +14,8 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -35,7 +36,7 @@
       "source": [
         "import pandas as pd"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -56,7 +57,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "p4rVmGBbvkB1",
-        "outputId": "9a2377d9-b3cc-4f10-cbae-b4ea74afd41a"
+        "outputId": "ea6bab9f-846a-47c3-b094-00610a7f0c8f"
       },
       "source": [
         "listtempat = []\n",
@@ -78,7 +79,7 @@
         "\n",
         "print(listtempat)"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -96,13 +97,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zm5-2ER9xBZ5",
-        "outputId": "b1cfaa1e-933d-4dd8-828a-1eb4ee9d4a0d"
+        "outputId": "48a5329f-5e88-4f13-c1ed-e1301e75eeb3"
       },
       "source": [
         "list_tempat = pd.Series(listtempat)\n",
         "print(list_tempat)"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -131,7 +132,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MVE51jkQxRbh",
-        "outputId": "2662c291-2ec1-48ea-ce61-0d5394861045"
+        "outputId": "b8b59df2-cc9a-4ad1-cbe3-306cba3b7fbe"
       },
       "source": [
         "banyakkorban = []\n",
@@ -173,12 +174,24 @@
         "banyak_korban = pd.Series(banyakkorban)\n",
         "print(banyak_korban)"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "5219\n"
+            "5219\n",
+            "0       1\n",
+            "1       1\n",
+            "2       1\n",
+            "3       1\n",
+            "4       1\n",
+            "       ..\n",
+            "5214    2\n",
+            "5215    2\n",
+            "5216    2\n",
+            "5217    2\n",
+            "5218    2\n",
+            "Length: 5219, dtype: int64\n"
           ],
           "name": "stdout"
         }
@@ -187,13 +200,93 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "GggoXcy_4GvL"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GggoXcy_4GvL",
+        "outputId": "74d4a258-274b-43ef-c4c2-45b95ca7230b"
       },
       "source": [
-        ""
+        "jeniskekerasan = []\n",
+        "banyakkekerasan = []\n",
+        "\n",
+        "#rumah tangga\n",
+        "\n",
+        "#fisik\n",
+        "for i in range(921):\n",
+        "  jeniskekerasan.append(\"fisik\")\n",
+        "for i in range(910):\n",
+        "  banyakkekerasan.append(1)\n",
+        "for i in range(7):\n",
+        "  banyakkekerasan.append(2)\n",
+        "for i in range(3):\n",
+        "  banyakkekerasan.append(3)\n",
+        "for i in range(1):\n",
+        "  banyakkekerasan.append(4)\n",
+        "\n",
+        "#seksual\n",
+        "for i in range(921):\n",
+        "  jeniskekerasan.append(\"seksual\")\n",
+        "for i in range(910):\n",
+        "  banyakkekerasan.append(1)\n",
+        "for i in range(7):\n",
+        "  banyakkekerasan.append(2)\n",
+        "for i in range(3):\n",
+        "  banyakkekerasan.append(3)\n",
+        "for i in range(1):\n",
+        "  banyakkekerasan.append(4)\n",
+        "\n",
+        "#psikis\n",
+        "for i in range(921):\n",
+        "  jeniskekerasan.append(\"psikis\")\n",
+        "for i in range(912):\n",
+        "  banyakkekerasan.append(1)\n",
+        "for i in range(9):\n",
+        "  banyakkekerasan.append(2)\n",
+        "\n",
+        "#penelantaran\n",
+        "for i in range(123):\n",
+        "  jeniskekerasan.append(\"penelantaran\")\n",
+        "for i in range(120):\n",
+        "  banyakkekerasan.append(1)\n",
+        "for i in range(3):\n",
+        "  banyakkekerasan.append(2)\n",
+        "\n",
+        "#lainnya\n",
+        "for i in range(154):\n",
+        "  jeniskekerasan.append(\"lainnya\")\n",
+        "for i in range(150):\n",
+        "  banyakkekerasan.append(1)\n",
+        "for i in range(4):\n",
+        "  banyakkekerasan.append(2)\n",
+        "\n",
+        "#exploit\n",
+        "for i in range(15):\n",
+        "  jeniskekerasan.append(\"eksploitasi\")\n",
+        "for i in range(15):\n",
+        "  banyakkekerasan.append(1)\n",
+        "\n",
+        "#traficking\n",
+        "for i in range(15):\n",
+        "  jeniskekerasan.append(\"traficking\")\n",
+        "for i in range(15):\n",
+        "  banyakkekerasan.append(1)\n",
+        "\n",
+        "\n",
+        "print(len(jeniskekerasan))\n",
+        "print(len(banyakkekerasan))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "3070\n",
+            "3070\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
