--- a/dataset_augmentation.ipynb
+++ b/dataset_augmentation.ipynb
@@ -204,7 +204,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "GggoXcy_4GvL",
-        "outputId": "74d4a258-274b-43ef-c4c2-45b95ca7230b"
+        "outputId": "83035cf2-3543-4a2e-a959-23b5f33a33ac"
       },
       "source": [
         "jeniskekerasan = []\n",
@@ -272,21 +272,252 @@
         "for i in range(15):\n",
         "  banyakkekerasan.append(1)\n",
         "\n",
+        "#tempat kerja\n",
+        "\n",
+        "#fisik\n",
+        "for i in range(9):\n",
+        "  jeniskekerasan.append(\"fisik\")\n",
+        "for i in range(9):\n",
+        "  banyakkekerasan.append(1)\n",
+        "\n",
+        "#seksual\n",
+        "for i in range(30):\n",
+        "  jeniskekerasan.append(\"seksual\")\n",
+        "for i in range(28):\n",
+        "  banyakkekerasan.append(1)\n",
+        "for i in range(2):\n",
+        "  banyakkekerasan.append(2)\n",
+        "\n",
+        "\n",
+        "#psikis\n",
+        "for i in range(24):\n",
+        "  jeniskekerasan.append(\"psikis\")\n",
+        "for i in range(24):\n",
+        "  banyakkekerasan.append(1)\n",
+        "\n",
+        "#lainnya\n",
+        "for i in range(2):\n",
+        "  jeniskekerasan.append(\"lainnya\")\n",
+        "for i in range(2):\n",
+        "  banyakkekerasan.append(1)\n",
+        "\n",
+        "#exploit\n",
+        "for i in range(4):\n",
+        "  jeniskekerasan.append(\"eksploitasi\")\n",
+        "for i in range(4):\n",
+        "  banyakkekerasan.append(1)\n",
+        "\n",
+        "#sekolah\n",
+        "\n",
+        "#fisik\n",
+        "for i in range(46):\n",
+        "  jeniskekerasan.append(\"fisik\")\n",
+        "for i in range(44):\n",
+        "  banyakkekerasan.append(1)\n",
+        "for i in range(2):\n",
+        "  banyakkekerasan.append(2)\n",
+        "\n",
+        "#seksual\n",
+        "for i in range(40):\n",
+        "  jeniskekerasan.append(\"seksual\")\n",
+        "for i in range(39):\n",
+        "  banyakkekerasan.append(1)\n",
+        "for i in range(1):\n",
+        "  banyakkekerasan.append(2)\n",
+        "\n",
+        "\n",
+        "#psikis\n",
+        "for i in range(29):\n",
+        "  jeniskekerasan.append(\"psikis\")\n",
+        "for i in range(29):\n",
+        "  banyakkekerasan.append(1)\n",
+        "\n",
+        "#fasilitas umum\n",
+        "\n",
+        "#fisik\n",
+        "for i in range(167):\n",
+        "  jeniskekerasan.append(\"fisik\")\n",
+        "for i in range(160):\n",
+        "  banyakkekerasan.append(1)\n",
+        "for i in range(7):\n",
+        "  banyakkekerasan.append(2)\n",
+        "\n",
+        "#seksual\n",
+        "for i in range(154):\n",
+        "  jeniskekerasan.append(\"seksual\")\n",
+        "for i in range(150):\n",
+        "  banyakkekerasan.append(1)\n",
+        "for i in range(4):\n",
+        "  banyakkekerasan.append(2)\n",
+        "\n",
+        "#psikis\n",
+        "for i in range(134):\n",
+        "  jeniskekerasan.append(\"psikis\")\n",
+        "for i in range(130):\n",
+        "  banyakkekerasan.append(1)\n",
+        "for i in range(4):\n",
+        "  banyakkekerasan.append(2)\n",
+        "\n",
+        "#penelantaran\n",
+        "for i in range(67):\n",
+        "  jeniskekerasan.append(\"penelantaran\")\n",
+        "for i in range(62):\n",
+        "  banyakkekerasan.append(1)\n",
+        "for i in range(5):\n",
+        "  banyakkekerasan.append(2)\n",
+        "\n",
+        "#lainnya\n",
+        "for i in range(134):\n",
+        "  jeniskekerasan.append(\"lainnya\")\n",
+        "for i in range(130):\n",
+        "  banyakkekerasan.append(1)\n",
+        "for i in range(4):\n",
+        "  banyakkekerasan.append(2)\n",
+        "\n",
+        "#exploit\n",
+        "for i in range(12):\n",
+        "  jeniskekerasan.append(\"eksploitasi\")\n",
+        "for i in range(12):\n",
+        "  banyakkekerasan.append(1)\n",
+        "\n",
+        "#lainnya\n",
+        "\n",
+        "#fisik\n",
+        "for i in range(208):\n",
+        "  jeniskekerasan.append(\"fisik\")\n",
+        "for i in range(200):\n",
+        "  banyakkekerasan.append(1)\n",
+        "for i in range(8):\n",
+        "  banyakkekerasan.append(2)\n",
+        "\n",
+        "#seksual\n",
+        "for i in range(272):\n",
+        "  jeniskekerasan.append(\"seksual\")\n",
+        "for i in range(260):\n",
+        "  banyakkekerasan.append(1)\n",
+        "for i in range(10):\n",
+        "  banyakkekerasan.append(2)\n",
+        "for i in range(2):\n",
+        "  banyakkekerasan.append(3)\n",
+        "\n",
+        "\n",
+        "#psikis\n",
+        "for i in range(207):\n",
+        "  jeniskekerasan.append(\"psikis\")\n",
+        "for i in range(203):\n",
+        "  banyakkekerasan.append(1)\n",
+        "for i in range(4):\n",
+        "  banyakkekerasan.append(2)\n",
+        "\n",
+        "#penelantaran\n",
+        "for i in range(259):\n",
+        "  jeniskekerasan.append(\"penelantaran\")\n",
+        "for i in range(250):\n",
+        "  banyakkekerasan.append(1)\n",
+        "for i in range(5):\n",
+        "  banyakkekerasan.append(2)\n",
+        "for i in range(4):\n",
+        "  banyakkekerasan.append(3)\n",
+        "\n",
+        "#lainnya\n",
+        "for i in range(260):\n",
+        "  jeniskekerasan.append(\"lainnya\")\n",
+        "for i in range(250):\n",
+        "  banyakkekerasan.append(1)\n",
+        "for i in range(7):\n",
+        "  banyakkekerasan.append(2)\n",
+        "for i in range(3):\n",
+        "  banyakkekerasan.append(3)\n",
+        "\n",
+        "#exploit\n",
+        "for i in range(13):\n",
+        "  jeniskekerasan.append(\"eksploitasi\")\n",
+        "for i in range(13):\n",
+        "  banyakkekerasan.append(1)\n",
+        "\n",
+        "#traficking\n",
+        "for i in range(78):\n",
+        "  jeniskekerasan.append(\"traficking\")\n",
+        "for i in range(75):\n",
+        "  banyakkekerasan.append(1)\n",
+        "for i in range(3):\n",
+        "  banyakkekerasan.append(2)\n",
+        "\n",
+        "\n",
+        "\n",
         "\n",
         "print(len(jeniskekerasan))\n",
         "print(len(banyakkekerasan))"
       ],
-      "execution_count": 7,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "3070\n",
-            "3070\n"
+            "5219\n",
+            "5219\n"
           ],
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4v4ajbOT-USK",
+        "outputId": "7b866b2f-5eac-4c4d-f398-90957bff12ae",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "jenis_kekerasan = pd.Series(jeniskekerasan)\n",
+        "banyak_kekerasan = pd.Series(banyakkekerasan)\n",
+        "print(jenis_kekerasan, banyak_kekerasan)"
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0            fisik\n",
+            "1            fisik\n",
+            "2            fisik\n",
+            "3            fisik\n",
+            "4            fisik\n",
+            "           ...    \n",
+            "5214    traficking\n",
+            "5215    traficking\n",
+            "5216    traficking\n",
+            "5217    traficking\n",
+            "5218    traficking\n",
+            "Length: 5219, dtype: object 0       1\n",
+            "1       1\n",
+            "2       1\n",
+            "3       1\n",
+            "4       1\n",
+            "       ..\n",
+            "5214    1\n",
+            "5215    1\n",
+            "5216    2\n",
+            "5217    2\n",
+            "5218    2\n",
+            "Length: 5219, dtype: int64\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jepMLeA9-flN"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
