--- a/dataset_augmentation.ipynb
+++ b/dataset_augmentation.ipynb
@@ -45,9 +45,9 @@
         "id": "_BeEcOzV4EVu"
       },
       "source": [
-        ""
+        "import random as rd"
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -129,16 +129,17 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 103
         },
         "id": "MVE51jkQxRbh",
-        "outputId": "b8b59df2-cc9a-4ad1-cbe3-306cba3b7fbe"
+        "outputId": "01cedddd-c29e-49a3-b12e-dcf1c3268407"
       },
       "source": [
         "banyakkorban = []\n",
         "\n",
         "\n",
-        "for i in range(2881):\n",
+        "'''for i in range(2881):\n",
         "  banyakkorban.append(1)\n",
         "for i in range(159):\n",
         "  banyakkorban.append(2)\n",
@@ -154,6 +155,18 @@
         "  banyakkorban.append(1)\n",
         "for i in range(13):\n",
         "  banyakkorban.append(2)\n",
+        "\n",
+        "for i in range():\n",
+        "  usiakorban.append(\"balita\")\n",
+        "for i in range():\n",
+        "  usiakorban.append(\"anak-anak\")\n",
+        "for i in range():\n",
+        "  usiakorban.append(\"remaja\")\n",
+        "for i in range():\n",
+        "  usiakorban.append(\"dewasa\")\n",
+        "for i in range():\n",
+        "  usiakorban.append(\"lansia\")\n",
+        "\n",
         "\n",
         "for i in range(5):\n",
         "  banyakkorban.append(1)\n",
@@ -172,28 +185,24 @@
         "\n",
         "print(len(banyakkorban))\n",
         "banyak_korban = pd.Series(banyakkorban)\n",
-        "print(banyak_korban)"
+        "print(banyak_korban)'''"
       ],
-      "execution_count": 6,
+      "execution_count": 13,
       "outputs": [
         {
-          "output_type": "stream",
-          "text": [
-            "5219\n",
-            "0       1\n",
-            "1       1\n",
-            "2       1\n",
-            "3       1\n",
-            "4       1\n",
-            "       ..\n",
-            "5214    2\n",
-            "5215    2\n",
-            "5216    2\n",
-            "5217    2\n",
-            "5218    2\n",
-            "Length: 5219, dtype: int64\n"
-          ],
-          "name": "stdout"
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'for i in range(2881):\\n  banyakkorban.append(1)\\nfor i in range(159):\\n  banyakkorban.append(2)\\nfor i in range(30):\\n  banyakkorban.append(3)\\n\\nfor i in range(62):\\n  banyakkorban.append(1)\\nfor i in range(7):\\n  banyakkorban.append(2)\\n\\nfor i in range(93):\\n  banyakkorban.append(1)\\nfor i in range(13):\\n  banyakkorban.append(2)\\n\\nfor i in range(5):\\n  banyakkorban.append(1)\\nfor i in range(4):\\n  banyakkorban.append(2)\\n\\nfor i in range(543):\\n  banyakkorban.append(1)\\nfor i in range(125):\\n  banyakkorban.append(2)\\n\\nfor i in range(1217):\\n  banyakkorban.append(1)\\nfor i in range(80):\\n  banyakkorban.append(2)\\n\\nprint(len(banyakkorban))\\nbanyak_korban = pd.Series(banyakkorban)\\nprint(banyak_korban)'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 13
         }
       ]
     },
@@ -209,16 +218,45 @@
       "source": [
         "jeniskekerasan = []\n",
         "banyakkekerasan = []\n",
+        "banyakkorban\n",
+        "usiakorban = []\n",
+        "hubunganpelaku = []\n",
         "\n",
         "#rumah tangga\n",
-        "\n",
         "#fisik\n",
         "for i in range(921):\n",
         "  jeniskekerasan.append(\"fisik\")\n",
         "for i in range(910):\n",
         "  banyakkekerasan.append(1)\n",
+        "for i in range(895):\n",
+        "  banyakkorban.append(1)\n",
+        "for i in range(90):\n",
+        "  usiakorban.append(\"balita\")\n",
+        "for i in range(100):\n",
+        "  usiakorban.append(\"anak-anak\")\n",
+        "for i in range(250):\n",
+        "  usiakorban.append(\"remaja\")\n",
+        "for i in range(450):\n",
+        "  usiakorban.append(\"dewasa\")\n",
+        "for i in range(5):\n",
+        "  usiakorban.append(\"lansia\")\n",
+        "\n",
+        "for i in range(10):\n",
+        "  banyakkorban.append(2)\n",
+        "for i in range(5):\n",
+        "  usiakorban.append(\"remaja\")\n",
+        "for i in range(5):\n",
+        "  usiakorban.append(\"dewasa\")\n",
+        "for i in range(5):\n",
+        "  banyakkorban.append(3)\n",
+        "for i in range(2):\n",
+        "  usiakorban.append(\"remaja\")\n",
+        "for i in range(3):\n",
+        "  usiakorban.append(\"dewasa\")\n",
+        "\n",
         "for i in range(7):\n",
         "  banyakkekerasan.append(2)\n",
+        "\n",
         "for i in range(3):\n",
         "  banyakkekerasan.append(3)\n",
         "for i in range(1):\n",
@@ -464,11 +502,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "4v4ajbOT-USK",
-        "outputId": "7b866b2f-5eac-4c4d-f398-90957bff12ae",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "4v4ajbOT-USK",
+        "outputId": "7b866b2f-5eac-4c4d-f398-90957bff12ae"
       },
       "source": [
         "jenis_kekerasan = pd.Series(jeniskekerasan)\n",
