--- a/dataset_augmentation.ipynb
+++ b/dataset_augmentation.ipynb
@@ -213,7 +213,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "GggoXcy_4GvL",
-        "outputId": "86423a4f-47e5-4603-83f3-ac95061a597b"
+        "outputId": "b2970bc3-d8ee-4bb1-d976-cb056e46a90e"
       },
       "source": [
         "jeniskekerasan = []\n",
@@ -1140,15 +1140,15 @@
         "print(len(banyakkorban))\n",
         "print(len(usiakorban))"
       ],
-      "execution_count": 41,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "5219\n",
             "5219\n",
-            "3922\n",
-            "3922\n"
+            "5219\n",
+            "5219\n"
           ],
           "name": "stdout"
         }
@@ -1161,14 +1161,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4v4ajbOT-USK",
-        "outputId": "7b866b2f-5eac-4c4d-f398-90957bff12ae"
+        "outputId": "89c6b25e-e91b-41fa-8753-6f5633efd934"
       },
       "source": [
         "jenis_kekerasan = pd.Series(jeniskekerasan)\n",
         "banyak_kekerasan = pd.Series(banyakkekerasan)\n",
-        "print(jenis_kekerasan, banyak_kekerasan)"
+        "banyak_korban = pd.Series(banyakkorban)\n",
+        "usia_korban = pd.Series(usiakorban)\n",
+        "print(jenis_kekerasan, banyak_kekerasan, banyak_korban, usia_korban)"
       ],
-      "execution_count": 10,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "stream",
@@ -1195,7 +1197,29 @@
             "5216    2\n",
             "5217    2\n",
             "5218    2\n",
-            "Length: 5219, dtype: int64\n"
+            "Length: 5219, dtype: int64 0       1\n",
+            "1       1\n",
+            "2       1\n",
+            "3       1\n",
+            "4       1\n",
+            "       ..\n",
+            "5214    2\n",
+            "5215    2\n",
+            "5216    1\n",
+            "5217    1\n",
+            "5218    2\n",
+            "Length: 5219, dtype: int64 0       balita\n",
+            "1       balita\n",
+            "2       balita\n",
+            "3       balita\n",
+            "4       balita\n",
+            "         ...  \n",
+            "5214    dewasa\n",
+            "5215    dewasa\n",
+            "5216    remaja\n",
+            "5217    dewasa\n",
+            "5218    dewasa\n",
+            "Length: 5219, dtype: object\n"
           ],
           "name": "stdout"
         }
