--- a/dataset_augmentation.ipynb
+++ b/dataset_augmentation.ipynb
@@ -129,99 +129,17 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 103
-        },
-        "id": "MVE51jkQxRbh",
-        "outputId": "01cedddd-c29e-49a3-b12e-dcf1c3268407"
-      },
-      "source": [
-        "banyakkorban = []\n",
-        "\n",
-        "\n",
-        "'''for i in range(2881):\n",
-        "  banyakkorban.append(1)\n",
-        "for i in range(159):\n",
-        "  banyakkorban.append(2)\n",
-        "for i in range(30):\n",
-        "  banyakkorban.append(3)\n",
-        "\n",
-        "for i in range(62):\n",
-        "  banyakkorban.append(1)\n",
-        "for i in range(7):\n",
-        "  banyakkorban.append(2)\n",
-        "\n",
-        "for i in range(93):\n",
-        "  banyakkorban.append(1)\n",
-        "for i in range(13):\n",
-        "  banyakkorban.append(2)\n",
-        "\n",
-        "for i in range():\n",
-        "  usiakorban.append(\"balita\")\n",
-        "for i in range():\n",
-        "  usiakorban.append(\"anak-anak\")\n",
-        "for i in range():\n",
-        "  usiakorban.append(\"remaja\")\n",
-        "for i in range():\n",
-        "  usiakorban.append(\"dewasa\")\n",
-        "for i in range():\n",
-        "  usiakorban.append(\"lansia\")\n",
-        "\n",
-        "\n",
-        "for i in range(5):\n",
-        "  banyakkorban.append(1)\n",
-        "for i in range(4):\n",
-        "  banyakkorban.append(2)\n",
-        "\n",
-        "for i in range(543):\n",
-        "  banyakkorban.append(1)\n",
-        "for i in range(125):\n",
-        "  banyakkorban.append(2)\n",
-        "\n",
-        "for i in range(1217):\n",
-        "  banyakkorban.append(1)\n",
-        "for i in range(80):\n",
-        "  banyakkorban.append(2)\n",
-        "\n",
-        "print(len(banyakkorban))\n",
-        "banyak_korban = pd.Series(banyakkorban)\n",
-        "print(banyak_korban)'''"
-      ],
-      "execution_count": 13,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            },
-            "text/plain": [
-              "'for i in range(2881):\\n  banyakkorban.append(1)\\nfor i in range(159):\\n  banyakkorban.append(2)\\nfor i in range(30):\\n  banyakkorban.append(3)\\n\\nfor i in range(62):\\n  banyakkorban.append(1)\\nfor i in range(7):\\n  banyakkorban.append(2)\\n\\nfor i in range(93):\\n  banyakkorban.append(1)\\nfor i in range(13):\\n  banyakkorban.append(2)\\n\\nfor i in range(5):\\n  banyakkorban.append(1)\\nfor i in range(4):\\n  banyakkorban.append(2)\\n\\nfor i in range(543):\\n  banyakkorban.append(1)\\nfor i in range(125):\\n  banyakkorban.append(2)\\n\\nfor i in range(1217):\\n  banyakkorban.append(1)\\nfor i in range(80):\\n  banyakkorban.append(2)\\n\\nprint(len(banyakkorban))\\nbanyak_korban = pd.Series(banyakkorban)\\nprint(banyak_korban)'"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 13
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "GggoXcy_4GvL",
-        "outputId": "b2970bc3-d8ee-4bb1-d976-cb056e46a90e"
+        "outputId": "82ea6304-0b7f-44ad-a444-2f913dcc9a5d"
       },
       "source": [
         "jeniskekerasan = []\n",
         "banyakkekerasan = []\n",
         "banyakkorban = []\n",
         "usiakorban = []\n",
-        "hubunganpelaku = []\n",
-        "\n",
+        "mitigasiresiko = []\n",
         "#rumah tangga\n",
         "#fisik\n",
         "for i in range(921):\n",
@@ -1140,7 +1058,7 @@
         "print(len(banyakkorban))\n",
         "print(len(usiakorban))"
       ],
-      "execution_count": 42,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "stream",
@@ -1161,16 +1079,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4v4ajbOT-USK",
-        "outputId": "89c6b25e-e91b-41fa-8753-6f5633efd934"
+        "outputId": "bcca38d6-45a7-4806-df2c-0357b168b381"
       },
       "source": [
         "jenis_kekerasan = pd.Series(jeniskekerasan)\n",
         "banyak_kekerasan = pd.Series(banyakkekerasan)\n",
         "banyak_korban = pd.Series(banyakkorban)\n",
         "usia_korban = pd.Series(usiakorban)\n",
+        "mitigasi_resiko = pd.Series(mitigasiresiko)\n",
         "print(jenis_kekerasan, banyak_kekerasan, banyak_korban, usia_korban)"
       ],
-      "execution_count": 43,
+      "execution_count": 45,
       "outputs": [
         {
           "output_type": "stream",
@@ -1222,18 +1141,209 @@
             "Length: 5219, dtype: object\n"
           ],
           "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:5: DeprecationWarning: The default dtype for empty Series will be 'object' instead of 'float64' in a future version. Specify a dtype explicitly to silence this warning.\n",
+            "  \"\"\"\n"
+          ],
+          "name": "stderr"
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "jepMLeA9-flN"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 408
+        },
+        "id": "jepMLeA9-flN",
+        "outputId": "9cc02341-3878-4f3a-8250-9acf9371e0e6"
       },
       "source": [
-        ""
+        "df = pd.DataFrame({\n",
+        "  'Tempat Kejadian': list_tempat,\n",
+        "  'Jenis Kekerasan': jenis_kekerasan, \n",
+        "  'Banyak Kekerasan yang dialami': banyak_kekerasan,\n",
+        "  'Banyak Korban Kekerasan' : banyak_korban,\n",
+        "  'Usia Korban': usia_korban,\n",
+        "  'Mitigasi Resiko': mitigasi_resiko\n",
+        "})\n",
+        "\n",
+        "df"
       ],
-      "execution_count": null,
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Tempat Kejadian</th>\n",
+              "      <th>Jenis Kekerasan</th>\n",
+              "      <th>Banyak Kekerasan yang dialami</th>\n",
+              "      <th>Banyak Korban Kekerasan</th>\n",
+              "      <th>Usia Korban</th>\n",
+              "      <th>Mitigasi Resiko</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>rumah-tangga</td>\n",
+              "      <td>fisik</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>balita</td>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>rumah-tangga</td>\n",
+              "      <td>fisik</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>balita</td>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>rumah-tangga</td>\n",
+              "      <td>fisik</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>balita</td>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>rumah-tangga</td>\n",
+              "      <td>fisik</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>balita</td>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>rumah-tangga</td>\n",
+              "      <td>fisik</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>balita</td>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5214</th>\n",
+              "      <td>lainnya</td>\n",
+              "      <td>traficking</td>\n",
+              "      <td>1</td>\n",
+              "      <td>2</td>\n",
+              "      <td>dewasa</td>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5215</th>\n",
+              "      <td>lainnya</td>\n",
+              "      <td>traficking</td>\n",
+              "      <td>1</td>\n",
+              "      <td>2</td>\n",
+              "      <td>dewasa</td>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5216</th>\n",
+              "      <td>lainnya</td>\n",
+              "      <td>traficking</td>\n",
+              "      <td>2</td>\n",
+              "      <td>1</td>\n",
+              "      <td>remaja</td>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5217</th>\n",
+              "      <td>lainnya</td>\n",
+              "      <td>traficking</td>\n",
+              "      <td>2</td>\n",
+              "      <td>1</td>\n",
+              "      <td>dewasa</td>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5218</th>\n",
+              "      <td>lainnya</td>\n",
+              "      <td>traficking</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "      <td>dewasa</td>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>5219 rows × 6 columns</p>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "     Tempat Kejadian Jenis Kekerasan  ...  Usia Korban  Mitigasi Resiko\n",
+              "0       rumah-tangga           fisik  ...       balita              NaN\n",
+              "1       rumah-tangga           fisik  ...       balita              NaN\n",
+              "2       rumah-tangga           fisik  ...       balita              NaN\n",
+              "3       rumah-tangga           fisik  ...       balita              NaN\n",
+              "4       rumah-tangga           fisik  ...       balita              NaN\n",
+              "...              ...             ...  ...          ...              ...\n",
+              "5214         lainnya      traficking  ...       dewasa              NaN\n",
+              "5215         lainnya      traficking  ...       dewasa              NaN\n",
+              "5216         lainnya      traficking  ...       remaja              NaN\n",
+              "5217         lainnya      traficking  ...       dewasa              NaN\n",
+              "5218         lainnya      traficking  ...       dewasa              NaN\n",
+              "\n",
+              "[5219 rows x 6 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 46
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "WOhXQn4IopXA"
+      },
+      "source": [
+        "df.to_csv('ketos.csv', index=False)"
+      ],
+      "execution_count": 47,
       "outputs": []
     }
   ]
