--- a/dataset_augmentation.ipynb
+++ b/dataset_augmentation.ipynb
@@ -1079,20 +1079,20 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "6a232a9e-7605-48c4-aa76-bc0b86b20ed8"
+        "outputId": "e1214c94-49ea-4355-8be4-46ff0a8a5dc3"
       },
       "source": [
         "hubunganpelaku = []\n",
         "#balita\n",
-        "for i in range(3070):\n",
-        "  if jeniskekerasan[i] == \"fisik\" and banyakkekerasan[i] == 1 and banyakkorban[i] == 1 and usiakorban[i] == \"balita\":\n",
+        "for i in range(5219):\n",
+        "  if listtempat[i] == \"rumah-tangga\" and jeniskekerasan[i] == \"fisik\" and banyakkekerasan[i] == 1 and banyakkorban[i] == 1 and usiakorban[i] == \"balita\":\n",
         "       if i < 50:\n",
         "         hubunganpelaku.append(\"orang-tua\")\n",
         "       if i >= 50  and i < 85:\n",
         "         hubunganpelaku.append(\"keluarga/saudara\") \n",
         "       if i >= 85  and i < 90:\n",
         "         hubunganpelaku.append(\"lainnya\")\n",
-        "  if jeniskekerasan[i] == \"fisik\" and banyakkekerasan[i] == 1 and banyakkorban[i] == 1 and usiakorban[i] == \"anak-anak\":\n",
+        "  if listtempat[i] == \"rumah-tangga\" and jeniskekerasan[i] == \"fisik\" and banyakkekerasan[i] == 1 and banyakkorban[i] == 1 and usiakorban[i] == \"anak-anak\":\n",
         "       if i < 140:\n",
         "         hubunganpelaku.append(\"orang-tua\")\n",
         "       if i >= 140  and i < 165:\n",
@@ -1101,7 +1101,7 @@
         "         hubunganpelaku.append(\"tetangga\") \n",
         "       if i >= 180  and i < 190:\n",
         "         hubunganpelaku.append(\"lainnya\")\n",
-        "  if jeniskekerasan[i] == \"fisik\" and banyakkekerasan[i] == 1 and banyakkorban[i] == 1 and usiakorban[i] == \"remaja\":\n",
+        "  if listtempat[i] == \"rumah-tangga\" and jeniskekerasan[i] == \"fisik\" and banyakkekerasan[i] == 1 and banyakkorban[i] == 1 and usiakorban[i] == \"remaja\":\n",
         "       if i < 270:\n",
         "         hubunganpelaku.append(\"orang-tua\")\n",
         "       if i >= 270  and i < 300:\n",
@@ -1119,7 +1119,7 @@
         "print(len(hubunganpelaku))\n",
         "print(hubunganpelaku)"
       ],
-      "execution_count": 13,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
