--- a/machine_learning.ipynb
+++ b/machine_learning.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "machine-learning.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMlVfbJbXk1go4ylrnerX1t",
+      "authorship_tag": "ABX9TyNsxxKp7HCHr35LODqNOUUg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,10 +30,363 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "WhuYbC_8VE_x"
+        "id": "WhuYbC_8VE_x",
+        "outputId": "b850ecfa-182b-4629-9ed9-df9714980c09",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        ""
+        "!pip install sklearn"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Requirement already satisfied: sklearn in /usr/local/lib/python3.7/dist-packages (0.0)\n",
+            "Requirement already satisfied: scikit-learn in /usr/local/lib/python3.7/dist-packages (from sklearn) (0.22.2.post1)\n",
+            "Requirement already satisfied: numpy>=1.11.0 in /usr/local/lib/python3.7/dist-packages (from scikit-learn->sklearn) (1.19.5)\n",
+            "Requirement already satisfied: joblib>=0.11 in /usr/local/lib/python3.7/dist-packages (from scikit-learn->sklearn) (1.0.1)\n",
+            "Requirement already satisfied: scipy>=0.17.0 in /usr/local/lib/python3.7/dist-packages (from scikit-learn->sklearn) (1.4.1)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PRcEi6iJV_Nm"
+      },
+      "source": [
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "\n",
+        "try:\n",
+        "  # %tensorflow_version only exists in Colab.\n",
+        "  %tensorflow_version 2.x\n",
+        "except Exception:\n",
+        "  pass\n",
+        "import tensorflow as tf\n",
+        "\n",
+        "from tensorflow import feature_column\n",
+        "from tensorflow.keras import layers\n",
+        "from sklearn.model_selection import train_test_split"
+      ],
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Y5EXLzOjWMIb",
+        "outputId": "8f55bda8-e0f2-47c6-826e-64cf8e559a5e",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 200
+        }
+      },
+      "source": [
+        "URL = 'https://raw.githubusercontent.com/martinpdab/asapa/main/dataset.csv'\n",
+        "dataframe = pd.read_csv(URL)\n",
+        "dataframe.head()"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Tempat Kejadian</th>\n",
+              "      <th>Jenis Kekerasan</th>\n",
+              "      <th>Banyak Kekerasan yang dialami</th>\n",
+              "      <th>Banyak Korban Kekerasan</th>\n",
+              "      <th>Usia Korban</th>\n",
+              "      <th>Hubungan Pelaku dengan Korban</th>\n",
+              "      <th>Mitigasi Resiko</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>rumah-tangga</td>\n",
+              "      <td>fisik</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>balita</td>\n",
+              "      <td>orang-tua</td>\n",
+              "      <td>3</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>rumah-tangga</td>\n",
+              "      <td>fisik</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>balita</td>\n",
+              "      <td>orang-tua</td>\n",
+              "      <td>3</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>rumah-tangga</td>\n",
+              "      <td>fisik</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>balita</td>\n",
+              "      <td>orang-tua</td>\n",
+              "      <td>3</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>rumah-tangga</td>\n",
+              "      <td>fisik</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>balita</td>\n",
+              "      <td>orang-tua</td>\n",
+              "      <td>3</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>rumah-tangga</td>\n",
+              "      <td>fisik</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>balita</td>\n",
+              "      <td>orang-tua</td>\n",
+              "      <td>3</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "  Tempat Kejadian  ... Mitigasi Resiko\n",
+              "0    rumah-tangga  ...               3\n",
+              "1    rumah-tangga  ...               3\n",
+              "2    rumah-tangga  ...               3\n",
+              "3    rumah-tangga  ...               3\n",
+              "4    rumah-tangga  ...               3\n",
+              "\n",
+              "[5 rows x 7 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "V1srYqHmXWVd",
+        "outputId": "5a3f529e-2960-46b1-e97d-ba07cb1e324d",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 200
+        }
+      },
+      "source": [
+        "from sklearn.utils import shuffle\n",
+        "df = shuffle(dataframe)\n",
+        "df.tail()"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Tempat Kejadian</th>\n",
+              "      <th>Jenis Kekerasan</th>\n",
+              "      <th>Banyak Kekerasan yang dialami</th>\n",
+              "      <th>Banyak Korban Kekerasan</th>\n",
+              "      <th>Usia Korban</th>\n",
+              "      <th>Hubungan Pelaku dengan Korban</th>\n",
+              "      <th>Mitigasi Resiko</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>2708</th>\n",
+              "      <td>rumah-tangga</td>\n",
+              "      <td>psikis</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>dewasa</td>\n",
+              "      <td>pacar/teman</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4001</th>\n",
+              "      <td>lainnya</td>\n",
+              "      <td>fisik</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>remaja</td>\n",
+              "      <td>pacar/teman</td>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>860</th>\n",
+              "      <td>rumah-tangga</td>\n",
+              "      <td>fisik</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>dewasa</td>\n",
+              "      <td>pacar/teman</td>\n",
+              "      <td>3</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3582</th>\n",
+              "      <td>fasilitas-umum</td>\n",
+              "      <td>psikis</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>remaja</td>\n",
+              "      <td>keluarga/saudara</td>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1710</th>\n",
+              "      <td>rumah-tangga</td>\n",
+              "      <td>seksual</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>dewasa</td>\n",
+              "      <td>majikan</td>\n",
+              "      <td>3</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "     Tempat Kejadian  ... Mitigasi Resiko\n",
+              "2708    rumah-tangga  ...               1\n",
+              "4001         lainnya  ...               2\n",
+              "860     rumah-tangga  ...               3\n",
+              "3582  fasilitas-umum  ...               2\n",
+              "1710    rumah-tangga  ...               3\n",
+              "\n",
+              "[5 rows x 7 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "FRQypu6oYOUY",
+        "outputId": "6fb02d60-a5d2-430d-cbd8-65864050c9ec",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "train, test = train_test_split(df, test_size=0.1)\n",
+        "print(len(train), 'train examples')\n",
+        "print(len(test), 'test examples')"
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "4697 train examples\n",
+            "522 test examples\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5e0eOsazZTML"
+      },
+      "source": [
+        "def df_to_dataset(df, shuffle=True, batch_size=32):\n",
+        "  dataframe = df.copy()\n",
+        "  labels = df.pop('Mitigasi Resiko')\n",
+        "  ds = tf.data.Dataset.from_tensor_slices((dict(df), labels))\n",
+        "  if shuffle:\n",
+        "    ds = ds.shuffle(buffer_size=len(df))\n",
+        "  ds = ds.batch(batch_size)\n",
+        "  return ds"
+      ],
+      "execution_count": 11,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nQ7pY4vuZ8cH"
+      },
+      "source": [
+        "batch_size = 5 # A small batch sized is used for demonstration purposes\n",
+        "train_ds = df_to_dataset(train, batch_size=batch_size)\n",
+        "val_ds = df_to_dataset(val, shuffle=False, batch_size=batch_size)\n",
+        "test_ds = df_to_dataset(test, shuffle=False, batch_size=batch_size)"
+      ],
+      "execution_count": 12,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3_0voNPRaHUz"
+      },
+      "source": [
+        "for feature_batch, label_batch in train_ds.take(1):\n",
+        "  print('Every feature:', list(feature_batch.keys()))\n",
+        "  print('A batch of ages:', feature_batch['age'])\n",
+        "  print('A batch of targets:', label_batch )"
       ],
       "execution_count": null,
       "outputs": []
